Fixes: revert colours to be fixed in other PR, fix sizing of bar to keep header 28px  high and body content correct dimensions on vertical alignment

--- a/packages/stockflux-components/src/index.css
+++ b/packages/stockflux-components/src/index.css
@@ -14,11 +14,11 @@
   --lighter-background: #606872;
   --light-background: #464e58;
 
-  --middle-background: #0D2437;
+  --middle-background: #28313d;
   --middle-background-light: #424b57;
   --middle-background-lighter: #5b6470;
 
-  --dark-background: #091A29;
+  --dark-background: #1a212a;
 
   --chart-teal: #37d8bc;
   --chart-teal-lighter: #51f2d6;
