--- a/packages/stockflux-launcher/src/App.css
+++ b/packages/stockflux-launcher/src/App.css
@@ -2,24 +2,36 @@ html {
   background-color: var(--middle-background);
 }
 
+.launcher-container {
+  display: flex;
+  flex-wrap: wrap;
+  height: 100%;
+}
+
+.launcher-title {
+  flex: 1 0 100%;
+  height: 28px;
+}
+
 .app {
   box-shadow: 0px 2px 4px 1px rgba(13, 36, 55, 1);
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
   color: var(--text-grey);
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  overflow: hidden;
+  position: relative;
+  width: 100%;
 }
 
 .shortcut-horizontal {
   padding-left: 24px;
+  padding-top: 12px;
 }
 
 .shortcut-vertical {
   padding-left: 24px;
-  padding-top: 12px;
+  padding-top: 48px;
 }
 
 .none,
@@ -28,12 +40,17 @@ html {
   justify-content: space-between;
   border-bottom: 1px solid #0372BE;
   align-items: center;
+  height: 60px;
 }
 
 .left,
 .right {
   flex-direction: column;
   justify-content: space-between;
+  display: flex;
+  flex-grow: 3;
+  position: absolute;
+  height: 100%;
 }
 
 .right {
